--- a/src/styles/profil.css
+++ b/src/styles/profil.css
@@ -17,7 +17,7 @@
   display: flex;
   flex-direction: column;
   gap: 24px;
-  flex: 0 0 300px;
+  flex: 0 0 350px;
 }
 
 .biographie-attributs {
@@ -72,4 +72,69 @@
 
 .profil .nom {
   margin-bottom: 0.3em;
+}
+
+.profil [loading] {
+  width: calc(30px + var(--random) * 20px);
+  content: "";
+  background: linear-gradient(
+    calc(90deg - var(--random) * 180deg),
+    lightgrey,
+    grey
+  );
+  background-size: 200% 200%;
+  color: transparent;
+
+  animation: animation-degrade-chargement calc(1s + var(--random) * 1500ms) ease
+    infinite;
+  animation-delay: calc(var(--random) * -2s);
+  border-radius: 2px;
+}
+.profil img[loading] {
+  display: block;
+  width: 100%;
+  height: 40%;
+}
+.profil img[loading]::after {
+  display: block;
+  background: inherit;
+  animation: inherit;
+  content: "";
+}
+
+.profil [data-key="description"][loading] {
+  width: 100%;
+  height: 1em;
+  background-color: red;
+  position: relative;
+  margin-top: 2.5em;
+}
+.profil [data-key="description"][loading]::before,
+.profil [data-key="description"][loading]::after {
+  position: absolute;
+  display: block;
+  background: inherit;
+  content: "";
+  width: 80%;
+  height: 1em;
+  top: 1.5em;
+  animation-delay: -0.3s;
+  border-radius: 2px;
+}
+.profil [data-key="description"][loading]::before {
+  top: -1.5em;
+  animation-delay: -0.6s;
+  width: 90%;
+}
+
+@keyframes animation-degrade-chargement {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
 }
