--- a/src/styles/recherche.css
+++ b/src/styles/recherche.css
@@ -11,10 +11,10 @@
   width: 70%;
 }
 
-#search {
+#search,
+#search-autocomplete {
   display: block;
   width: 100%;
-  background: white;
   border: none;
   border-radius: 99px;
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
@@ -26,6 +26,16 @@
 }
 #search:focus {
   box-shadow: 0 0 0 2px #0055a4, 0 1px 2px 2px rgba(0, 0, 0, 0.2);
+}
+
+#search-autocomplete {
+  position: absolute;
+  top: 0;
+  background: white;
+  opacity: 0.2;
+  overflow: hidden;
+  height: 52px;
+  pointer-events: none;
 }
 
 #searchButton {
