--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -41,6 +41,11 @@ header nav a:focus-visible {
   background: white;
 }
 
+header h1 a {
+  color: inherit !important;
+  text-decoration: none;
+}
+
 .drapeau-francais {
   width: 160px;
   height: 24px;
