--- a/src/styles/profil.css
+++ b/src/styles/profil.css
@@ -11,6 +11,7 @@
 }
 .profil .colonne-politique {
   order: 2;
+  flex-grow: 1;
 }
 
 .profil .colonne-perso {
@@ -108,6 +109,7 @@
   background-color: red;
   position: relative;
   margin-top: 2.5em;
+  margin-bottom: 2.5em;
 }
 .profil [data-key="description"][loading]::before,
 .profil [data-key="description"][loading]::after {
