--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -71,3 +71,28 @@ main {
 main .sheet {
   border-radius: 0px 0px 3px 3px;
 }
+
+dl {
+  position: relative;
+  line-height: 1.1;
+  display: flex;
+  flex-direction: column;
+  gap: 0.4em;
+  font-size: 0.9rem;
+}
+
+dl dt {
+  font-weight: bold;
+  flex: 0 0 50%;
+}
+
+dl div {
+  display: flex;
+  flex-direction: row;
+  gap: 0.5ch;
+}
+
+dd ul {
+  list-style: none;
+  padding-left: 0px;
+}
