--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -80,3 +80,28 @@ main .sheet {
 [hidden] {
   display: none !important;
 }
+
+dl {
+  position: relative;
+  line-height: 1.1;
+  display: flex;
+  flex-direction: column;
+  gap: 0.4em;
+  font-size: 0.9rem;
+}
+
+dl dt {
+  font-weight: bold;
+  flex: 0 0 50%;
+}
+
+dl div {
+  display: flex;
+  flex-direction: row;
+  gap: 0.5ch;
+}
+
+dd ul {
+  list-style: none;
+  padding-left: 0px;
+}
