--- a/src/styles/parti.css
+++ b/src/styles/parti.css
@@ -1,5 +1,5 @@
 .parti {
-  border-left: 5px solid var(--couleur-parti, white);
+  border-left: 5px solid var(--couleur-parti, transparent);
 }
 
 .parti .nom {
