--- a/src/styles/typography.css
+++ b/src/styles/typography.css
@@ -9,25 +9,24 @@
 
 h1,
 .h1 {
+  line-height: 1.1;
   font-size: 2.5rem;
   font-weight: bold;
   font-family: Marianne, Inter, sans-serif;
 }
 h2,
 .h2 {
+  line-height: 1.2;
   font-size: 1.8rem;
   font-weight: bold;
   font-family: Marianne, Inter, sans-serif;
 }
 h3,
 .h3 {
+  line-height: 1.1;
   font-size: 1.3rem;
   font-weight: 600;
-}
-h4,
-.h4 {
-  font-size: 1.1rem;
-  font-weight: 700;
+  font-family: Marianne, Inter, sans-serif;
 }
 
 p + p {
