marge manquante sur description loading spinner

--- a/src/styles/loading.css
+++ b/src/styles/loading.css
@@ -39,6 +39,7 @@ main [data-key="description"][loading] {
   height: 1em;
   position: relative;
   margin-top: 2.5em;
+  margin-bottom: 2.5em;
 }
 main [data-key="description"][loading]::before,
 main [data-key="description"][loading]::after {
