--- a/src/styles/recherche.css
+++ b/src/styles/recherche.css
@@ -74,6 +74,10 @@
   display: flex;
   flex-direction: column;
   gap: 1em;
+
+  box-shadow: 0 1px 1px hsla(0, 0%, 0%, 0.05);
+  border-bottom-left-radius: 2px;
+  border-bottom-right-radius: 2px;
 }
 
 #searchResultsContainer ul {
