--- a/src/styles/recherche.css
+++ b/src/styles/recherche.css
@@ -94,3 +94,65 @@
 #searchResultsContainer[n-partis="0"] #resultats-partis {
   display: none;
 }
+
+.home-cards {
+  display: grid;
+  width: 70%;
+  grid-template-columns: repeat(auto-fit, minmax(30ch, 1fr));
+  gap: 1em;
+}
+
+.home-card {
+  display: grid;
+  grid-template-columns: 4em 1fr;
+  grid-template-rows: 2em 2em;
+  gap: 0px 0px;
+  grid-template-areas: "icon title" "icon subtitle";
+  box-shadow: 0 1px 3px hsla(0, 0%, 0%, 0.1);
+  background-color: white;
+  border-radius: 5px;
+  overflow: hidden;
+  transition: all 500ms ease;
+}
+
+.home-card:hover {
+  box-shadow: 0 3px 9px hsla(0, 0%, 0%, 0.2);
+  transition: all 100ms ease;
+}
+
+.home-card__icon {
+  grid-area: icon;
+  object-fit: contain;
+  height: 4em;
+  width: 4em;
+  margin-right: 0.5em;
+}
+
+.home-card__title,
+.home-card__subtitle {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  padding-right: 8px;
+  color: inherit !important;
+  text-decoration: none;
+}
+
+.home-card__title:hover,
+.home-card__subtitle:hover {
+  text-decoration: underline;
+}
+
+.home-card__title {
+  grid-area: title;
+  font-size: 1.1em;
+  font-weight: 400;
+  padding-top: 8px;
+}
+
+.home-card__subtitle {
+  grid-area: subtitle;
+  font-size: 0.8em;
+  font-weight: 500;
+  padding-bottom: 8px;
+}
