--- a/src/styles/loading.css
+++ b/src/styles/loading.css
@@ -26,6 +26,11 @@ main img[loading]::after {
   content: "";
 }
 
+main h2[loading] {
+  width: 70%;
+  height: 1.2em;
+}
+
 main img {
   transition: opacity 400ms ease 500ms;
 }
