Ajout du lien wikidata en bas des pages Profil, Parti et Ideologie

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -103,6 +103,9 @@ footer {
   justify-content: center;
   margin-top: auto;
   padding: 24px;
+  flex-direction: column;
+  align-items: center;
+  gap: 1em;
 }
 
 main {
