--- a/src/styles/presidents.css
+++ b/src/styles/presidents.css
@@ -10,6 +10,19 @@
   font-size: 13px;
 }
 
+.container ul:before {
+  content: '';
+  width: 1px;
+  height: 100%;
+  position: absolute;
+  border-left: 2px dashed #000;
+
+}
+
+.container ul li:not(:first-child) {
+  margin-top: 0px;
+}
+
 .container ul li {
   position: relative;
   margin-left: 30px ;
