--- a/styles/main.css
+++ b/styles/main.css
@@ -9,7 +9,6 @@ body {
 }
 
 header {
-  position: sticky;
   padding: 16px 16px;
   background-color: #39434c;
   color: rgba(255, 255, 255, 0.9);
@@ -57,6 +56,12 @@ header p {
 }
 
 @media (max-width: 600px) {
+  header {
+    position: relative;
+  }
+  header p {
+    display: none;
+  }
   header h1 {
     font-size: 1.8rem;
   }
